<resources>
    <string name="app_name">PasswordManager</string>
    <string name="creator_name">Danil Smirnov</string>
    <string name="passwords">Пароли</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="loginin">Войти</string>
    <string name="create">Добавить</string>
    <string name="title_activity_add_password">AddPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>