<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:minWidth="300dp"
        android:layout_centerVertical="true"
        >
        <TextView
            android:id="@+id/textApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text17sp"
            android:textStyle="bold"
            tools:text="@string/app_name" />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/login"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/password"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSale"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:stateListAnimator="@null"
            android:text="@string/loginin"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:onClick="login"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>